--- a/dist-server/package.json
+++ b/dist-server/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server:dev": "tsx watch server.ts",
-    "start": "node dist-server/server.js",
+    "start": "node server.js",
     "start:dev": "concurrently \"npm run dev\" \"npm run server:dev\""
   },
   "dependencies": {
