--- a/dist-server/.env
+++ b/dist-server/.env
@@ -1,7 +1,6 @@
 EMAIL_USER=tahmeedtoqi123@gmail.com
 EMAIL_PASS=caaamfezsaxvldyq
 VITE_API_URL=http://localhost:5000
-MYSQL_HOST=lxbd2.alpha.net.bd
-MYSQL_USER=magentab_thoky
-MYSQL_PASSWORD=0987poiulk09
-MYSQL_DATABASE=magentab_fira_waitlist
+MYSQL_HOST=localhost
+MYSQL_USER=admin
+MYSQL_PASSWORD=admin
